# bookmark-manager

./: .gitignore  AmazonQ.md  README.md  fix-jwt-auth.sh  manual-test-steps.md  package-lock.json  package.json  search-functionality-test-report.md  test-api.sh  test-token-expiry.js  token-expiry-test-report.md
backend/: app.py  requirements.txt
c-backend/: CMakeLists.txt  build.sh  run.sh
c-backend/include/: app.h
c-backend/src/: app.c  main.c
cpp-backend/: CMakeLists.txt
cpp-backend/include/: app.h
cpp-backend/src/: app.cpp  main.cpp
dotnet-backend/: .gitignore  BookmarkManager.csproj  Dockerfile  Program.cs  README.md  appsettings.json  run-with-docker.sh
dotnet-backend/Controllers/: AuthController.cs  BookmarkController.cs  HealthController.cs
dotnet-backend/DTOs/: AuthResponse.cs  BookmarkRequest.cs  LoginRequest.cs  RegisterRequest.cs
dotnet-backend/Data/: ApplicationDbContext.cs
dotnet-backend/Middleware/: ExceptionMiddleware.cs
dotnet-backend/Models/: Bookmark.cs  User.cs
dotnet-backend/Properties/: launchSettings.json
dotnet-backend/Services/: BookmarkService.cs  IBookmarkService.cs  IJwtService.cs  IUserService.cs  JwtService.cs  UserService.cs
frontend/bookmark-manager-frontend/: README.md  angular.json  package-lock.json  package.json  start.sh
frontend/bookmark-manager-frontend/src/: index.html  styles.scss
frontend/bookmark-manager-frontend/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/bookmark-manager-frontend/src/app/bookmarks/: bookmarks.component.ts
frontend/bookmark-manager-frontend/src/app/components/bookmarks/: bookmarks.component.html  bookmarks.component.scss  bookmarks.component.ts
frontend/bookmark-manager-frontend/src/app/components/login/: login.component.html  login.component.scss  login.component.ts
frontend/bookmark-manager-frontend/src/app/components/token-expiry-dialog/: token-expiry-dialog.component.ts
frontend/bookmark-manager-frontend/src/app/login/: login.component.ts
frontend/bookmark-manager-frontend/src/app/register/: register.component.ts
frontend/bookmark-manager-frontend/src/app/services/: auth.service.ts  bookmark.service.ts  notification.service.ts  token-expiry.service.ts
java-backend/: .dockerignore  Dockerfile  README.md  build-and-run.sh  build-instructions.md  cleanup.sh  docker-compose-dev.yml  docker-compose.yml  fix-permissions.sh  full-stack-start.sh  install-docker.sh  manual-test-commands.md  mvnw  pom.xml  run-tests.sh  run-with-docker.sh  run-without-docker.sh  start-dev.sh  start-prod.sh  test-api.sh
java-backend/src/main/java/com/example/bookmarkmanager/: BookmarkManagerApplication.java
java-backend/src/main/java/com/example/bookmarkmanager/config/: ActuatorConfig.java
java-backend/src/main/java/com/example/bookmarkmanager/controller/: AuthController.java  BookmarkController.java  HealthController.java
java-backend/src/main/java/com/example/bookmarkmanager/dto/: BookmarkDto.java  JwtResponse.java  LoginRequestDto.java  LoginResponseDto.java  MessageResponseDto.java  UserDto.java  UserRegistrationDto.java
java-backend/src/main/java/com/example/bookmarkmanager/exception/: GlobalExceptionHandler.java
java-backend/src/main/java/com/example/bookmarkmanager/model/: Bookmark.java  User.java
java-backend/src/main/java/com/example/bookmarkmanager/repository/: BookmarkRepository.java  UserRepository.java
java-backend/src/main/java/com/example/bookmarkmanager/security/: AuthTokenFilter.java  JwtUtils.java  (+7 more)
java-backend/src/main/resources/: application-dev.properties  application-prod.properties  application-test.properties  application.properties
rust-backend/: Cargo.toml
rust-backend/migrations/: 20250411133559_initial_schema.sql
rust-backend/src/: auth.rs  config.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs
test/src/main/java/com/example/bookmarkmanager/: BookmarkManagerApplicationTest.java
(+5 files in other folders)
