[package]
name = "rust-bookmark-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework & Async runtime
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json", "macros"] } # Or another framework like actix-web

# Database (SQLite)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono", "migrate"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Password Hashing (using Argon2 - much more secure than plain SHA256)
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] } # Needed by argon2

# JWT
jsonwebtoken = "9"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Command-line argument parsing
clap = { version = "4", features = ["derive"] }

# URL validation
url = "2.5"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Randomness (for JWT secret generation)
rand = "0.8"
hex = "0.4" # For converting random bytes to hex string
base64 = "0.21"
dotenvy = "0.15"

# Optional: For AuthenticatedUser extractor example
# async-trait = "0.1"
# axum-extra = { version = "0.9", features = ["typed-header"] }
